# linux-3-finger-drag

./: .gitignore  3fd-config.json  60-uinput.rules  61-hotplug.rules  CHANGELOG.md  Cargo.toml  README.md  install.sh  multi-finger-drag.service  response-map.md  three-finger-drag.service  update.sh
.github/workflows/: ci.yml
src/: config.rs  event_handler.rs  init_fns.rs  lib.rs  libinput_init.rs  main.rs  virtual_trackpad.rs
src/benches/: cloning.rs
src/init/: config.rs  discovery.rs  libinput_init.rs  mod.rs
src/runtime/: event_handler.rs  event_handling.rs  gesture.rs  mod.rs  mt_proxy.rs  virtual_trackpad.rs
src/runtime/gesture/: fuzz.rs  tests.rs
tests/: integration.rs
