[package]
name = "linux-3-finger-drag"
version = "1.5.0"
edition = "2021"

[dependencies]
input-linux = "0.7.1"
nix = "0.29.0"
signal-hook = "0.3.17"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
input = "0.9.1"
users = "0.11.0"
serde_with = "3.14.0"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
futures-lite = "2.6.1"
async-io = "2.5.0"

[[bench]]
name = "cloning"
path = "src/benches/cloning.rs"
harness = false

[dev-dependencies]
criterion = "0.7.0"
