[package]
name = "linux-3-finger-drag"
version = "2.2.0"
edition = "2021"

[dependencies]
input-linux = "0.7.1"
libc = "0.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tokio = { version = "1.47.1", features = ["macros", "rt", "time", "net", "signal"] }

[profile.release]
lto = true
codegen-units = 1
